# galah-mcp

./: .gitignore  README.md  pyproject.toml  server.py  setup.sh
.github/workflows/: test.yml
tests/: conftest.py  test_equivalence.py
