[project]
name = "galah-mcp"
version = "0.1.0"
description = "MCP server exposing the galah library (Atlas of Living Australia)"
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
authors = [{ name = "vjrj", email = "vjrj@comunes.org" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "galah-python>=0.13.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/living-atlases/galah-mcp"
Repository = "https://github.com/living-atlases/galah-mcp"

[project.scripts]
galah-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
